# my-lang

./: .gitignore  Makefile  README.md  claude.md  compile_commands.json  design.md  dune-project  my_lang.opam  task.md  test_scheme.ml  test_scheme_dune
debug/: debug.ml  dune
docs/: ARCHITECTURE.md  BEST_PRACTICES.md  BEST_PRACTICES_GUIDE.md  CONTRIBUTING.md  ROADMAP.md  STDLIB.md  TUTORIAL.md  TUTORIAL_CREATE_LANGUAGE.md
examples/: metaprogramming_demo.ml  std.ml  test_import.ml
examples/advanced/: higher_order.ml  quicksort.ml
examples/language/: arithmetic.ml  functions.ml  indexing.ml  lists.ml  pattern_matching.ml  recursion.ml  strings.ml  variables.ml  while_loop.ml
examples/stdlib/: list.ml  map.ml  option.ml  queue.ml  result.ml  set.ml  stack.ml  test.ml  test_option.ml  test_type2.ml
framework/: dune
framework/ast/: ast_types.ml
framework/common/: language_intf.ml  pipeline.ml  pos.ml
framework/metaprogramming/: ctfe.ml  macro.ml  meta_intf.ml  quote.ml
framework/tools/: lsp.ml  repl.ml
lib/: actor.ml  aot.ml  array_ops.ml  ast.ml  builtin_types.ml  builtins.ml  bytecode.ml  compilation_cache.ml  compiler.ml  debugger.ml  diagnostics.ml  doc_generator.ml  dune  env.ml  error_context.ml  error_monad.ml  eval.ml  eval_builtin.ml  eval_helpers.ml  eval_pattern.ml  ffi.ml  formatter.ml  gc.ml  gc_bridge.ml  generational_gc.ml  incremental_compile.ml  jit.ml  jit_mmap.c  jit_mmap.ml  lexer.mll  llvm_backend.ml  llvm_compile.ml  lsp_server.ml  module_dependency.ml  my_lang.ml  optimizer.ml  ownership.ml  package_manager.ml  parser.mly  parser_recovery.ml  (+20 more)
playground/: index.html
self_hosted/: lexer.lang
templates/basic_language/: README.md  ast.ml  dune-project  eval.ml  lexer.mll  my_lang.ml  parser.mly
templates/basic_language/lib/: ast.ml  dune  eval.ml  lexer.mll  parser.mly
test/: benchmark.ml  benchmark_suite.ml  dune  test_actor.ml  test_alcotest.ml  test_ast_cache_perf.ml  test_boundary.ml  test_bytecode.ml  test_comprehensive.ml  test_comprehensive_simple.ml  test_comprehensive_v2.ml  test_consistency.ml  test_debugger.ml  test_diagnostics.ml  test_edge_cases.ml  test_effects.ml  test_eval_coverage.ml  test_formatter_doc.ml  test_gadt.ml  test_gc.ml  test_generational_gc.ml  test_generic_adt.ml  test_incremental.ml  test_industrial_stdlib.ml  test_jit_mmap.ml  test_lexer.ml  test_llvm.ml  test_llvm_compile.ml  test_lsp.ml  test_module.ml  test_my_lang.ml  test_new_stdlib.ml  test_optimizer.ml  test_ownership.ml  test_parallel.ml  test_parse_module.ml  test_parse_type.ml  test_parser_recovery.ml  test_plugins.ml  test_record_update.ml  (+10 more)
