(include_subdirs unqualified)

(library
 (name my_lang)
 (libraries core yojson threads unix str base64)
 (flags (:standard -warn-error -A))
 (preprocess
  (pps ppx_jane))
 (instrumentation
  (backend bisect_ppx))
 (foreign_stubs
  (language c)
  (names jit_mmap)))

(menhir
 (modules parser))

(ocamllex lexer)
