(executable
 (name test_my_lang)
 (libraries my_lang core))

(executable
 (name test_bytecode)
 (libraries my_lang core))

(executable
 (name test_consistency)
 (libraries my_lang core))

(executable
 (name test_wasm)
 (libraries my_lang core))

(executable
 (name test_record_update)
 (libraries my_lang core))

(executable
 (name test_generic_adt)
 (libraries my_lang core))
