(executable
 (name test_my_lang)
 (libraries my_lang core))

(executable
 (name test_bytecode)
 (libraries my_lang core))

(executable
 (name test_consistency)
 (libraries my_lang core))

(executable
 (name test_wasm)
 (libraries my_lang core))

(executable
 (name test_record_update)
 (libraries my_lang core))

(executable
 (name test_generic_adt)
 (libraries my_lang core))

(executable
 (name test_parse_type)
 (libraries my_lang core))

(executable
 (name test_gc)
 (libraries my_lang core))

(executable
 (name test_module)
 (libraries my_lang core))

(executable
 (name test_parse_module)
 (libraries my_lang core))

(executable
 (name test_type_debug)
 (libraries my_lang core))

(executable
 (name test_lexer)
 (libraries my_lang core))

(executable
 (name test_reg_vm)
 (libraries my_lang core))

(executable
 (name benchmark)
 (libraries my_lang core))

(executable
 (name test_ownership)
 (libraries my_lang core))

(executable
 (name test_traits)
 (libraries my_lang core))

(executable
 (name test_actor)
 (libraries my_lang core))

(executable
 (name test_effects)
 (libraries my_lang core))

(executable
 (name test_generational_gc)
 (libraries my_lang core))

(executable
 (name test_jit_mmap)
 (libraries my_lang core))

