(executable
 (name test_my_lang)
 (libraries my_lang core))

(executable
 (name test_bytecode)
 (libraries my_lang core))

(executable
 (name test_consistency)
 (libraries my_lang core))

(executable
 (name test_wasm)
 (libraries my_lang core))

(executable
 (name test_record_update)
 (libraries my_lang core))

(executable
 (name test_generic_adt)
 (libraries my_lang core))

(executable
 (name test_parse_type)
 (libraries my_lang core))

(executable
 (name test_gc)
 (libraries my_lang core))

(executable
 (name test_module)
 (libraries my_lang core))

(executable
 (name test_parse_module)
 (libraries my_lang core))

(executable
 (name test_type_debug)
 (libraries my_lang core))

(executable
 (name test_lexer)
 (libraries my_lang core))

(executable
 (name test_reg_vm)
 (libraries my_lang core))

(executable
 (name benchmark)
 (libraries my_lang core))

(executable
 (name benchmark_suite)
 (libraries my_lang core))

(executable
 (name test_ownership)
 (libraries my_lang core))

(executable
 (name test_traits)
 (libraries my_lang core))

(executable
 (name test_actor)
 (libraries my_lang core))

(executable
 (name test_effects)
 (libraries my_lang core))

(executable
 (name test_generational_gc)
 (libraries my_lang core))

(executable
 (name test_jit_mmap)
 (libraries my_lang core))

(executable
 (name test_gadt)
 (libraries my_lang core))

(executable
 (name test_incremental)
 (libraries my_lang core))

(executable
 (name test_ast_cache_perf)
 (libraries my_lang core))

(executable
 (name test_stdlib)
 (libraries my_lang core))

(executable
 (name test_debugger)
 (libraries my_lang core))

(executable
 (name test_parallel)
 (libraries my_lang core))

(executable
 (name test_llvm)
 (libraries my_lang core))

(executable
 (name test_diagnostics)
 (libraries my_lang core))

(executable
 (name test_parser_recovery)
 (libraries my_lang core))

(executable
 (name test_optimizer)
 (libraries my_lang core))

(executable
 (name test_llvm_compile)
 (libraries my_lang core))

(executable
 (name test_lsp)
 (libraries my_lang core))

(executable
 (name test_formatter_doc)
 (libraries my_lang core))

(executable
 (name test_robustness)
 (libraries my_lang core))

(executable
 (name test_edge_cases)
 (libraries my_lang core))

(executable
 (name test_plugins)
 (libraries my_lang core))

(executable
 (name test_stdlib_ext)
 (libraries my_lang core))

(executable
 (name test_self_hosted)
 (libraries my_lang core))

(executable
 (name test_eval_coverage)
 (libraries my_lang core))

(executable
 (name test_boundary)
 (libraries my_lang core))

(executable
 (name test_new_stdlib)
 (libraries my_lang core))

(executable
 (name test_industrial_stdlib)
 (libraries my_lang core))

(executable
 (name test_alcotest)
 (libraries my_lang core alcotest))

